--- a/PFinal/Web.config
+++ b/PFinal/Web.config
@@ -18,6 +18,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--referenciar a base de dados-->
+  <connectionStrings>
+    <add name="MusicalDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MusicalDB.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
